--- a/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj.filters
+++ b/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj.filters
@@ -26,5 +26,6 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="_Resources\Config.xml" />
+    <Xml Include="_Resources\DemoPostprocessing.xml" />
   </ItemGroup>
 </Project>
