Adding shadows support
also initializer change and removing locationNumber from config

--- a/EngineQ/EngineQDemonstration/_Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/_Resources/postprocessing.conf
@@ -5,7 +5,7 @@
 		<TextureConfiguration Name="normal" DataType="GL_FLOAT" InternalFormat="GL_RGB16F" Format="GL_RGB"/>
 		<TextureConfiguration Name="albedo" InternalFormat="GL_RGBA" Format="GL_RGBA"/>
 	</Textures>
-	<Renderer Deferred="true">
+	<Renderer Deferred="true" GlobalShadows="true">
 		<Output>
 			<OutputTexture Texture="position"/>
 			<OutputTexture Texture="normal" />
