working lights attributes passing to shader

--- a/EngineQ/EngineQDemonstration/_Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/_Resources/postprocessing.conf
@@ -13,7 +13,7 @@
 		</Output>
 	</Renderer>
 	<Effects>
-		<EffectConfiguration Shader="8">//geomtry lightning
+		<EffectConfiguration Shader="12" ApplyShadowsData="true">//geomtry lightning
 			<Input>
 				<InputPair Location="0" Texture="position" LocationName="worldPosition"/>
 				<InputPair Location="1" Texture="normal" LocationName="normal"/>
