--- a/EngineQ/EngineQRenderer/EngineQRenderer.vcxproj.filters
+++ b/EngineQ/EngineQRenderer/EngineQRenderer.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Graphics\Shadows\Light.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Graphics\CubeTexture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Configuration\RendererConfiguration.hpp">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Graphics\Shadows\Light.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\CubeTexture.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
