--- a/EngineQ/Source/CMakeLists.txt
+++ b/EngineQ/Source/CMakeLists.txt
@@ -17,8 +17,6 @@ include(
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(CURRENT_PLATFORM "x64")
-
 if(MSVC AND (CMAKE_CXX_COMPILER_ID STREQUAL "Clang"))
 	string(REPLACE "-gline-tables-only" "-g2 -gdwarf-2" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
@@ -27,7 +25,7 @@ endif()
 #message(STATUS "CMAKE_CXX_IGNORE_EXTENSIONS = " "${CMAKE_CXX_IGNORE_EXTENSIONS}")
 #message(STATUS "CMAKE_CXX_SOURCE_FILE_EXTENSIONS = " "${CMAKE_CXX_SOURCE_FILE_EXTENSIONS}")
 #message(STATUS "CMAKE_CXX_COMPILER_ID = " ${CMAKE_CXX_COMPILER_ID})
-message(STATUS "CMAKE_CXX_FLAGS = " ${CMAKE_CXX_FLAGS})
+#message(STATUS "CMAKE_CXX_FLAGS = " ${CMAKE_CXX_FLAGS})
 #message(STATUS "CMAKE_CXX_FLAGS_DEBUG = " ${CMAKE_CXX_FLAGS_DEBUG})
 #message(STATUS "CMAKE_CXX_FLAGS_RELEASE = " ${CMAKE_CXX_FLAGS_RELEASE})
 #message(STATUS "CMAKE_BUILD_TYPE = " ${CMAKE_BUILD_TYPE})
