--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -45,6 +45,7 @@
     <Compile Include="LightRotateScript.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotateTest.cs" />
+    <Compile Include="TesterScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EngineQScripting\EngineQScripting.csproj">
