--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -43,6 +43,7 @@
     <Compile Include="CameraMoveClass.cs" />
     <Compile Include="Initializer.cs" />
     <Compile Include="LightRotateScript.cs" />
+    <Compile Include="MyEffectController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotateTest.cs" />
     <Compile Include="TesterScript.cs" />
