--- a/EngineQ/Source/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/Source/EngineQScripting/EngineQScripting.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Objects\EffectController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Math\Utils.cs" />
     <Compile Include="Math\Matrix3.cs" />
