--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -46,6 +46,7 @@
     <Compile Include="MyEffectController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotateTest.cs" />
+    <Compile Include="SSAOController.cs" />
     <Compile Include="TesterScript.cs" />
   </ItemGroup>
   <ItemGroup>
