--- a/EngineQ/Source/EngineQDemonstration/CMakeLists.txt
+++ b/EngineQ/Source/EngineQDemonstration/CMakeLists.txt
@@ -46,7 +46,7 @@ SetupProject(
 	ADDITIONAL_FILES
 		${ALWAYS_DO_POST_BUILD_FILE}
 	
-	OUTPUT_PATH "${BUILD_ROOT_PATH}/${PROJECT_NAME}/bin"
+#	OUTPUT_PATH "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/bin"
 	FOLDER "EngineQDemonstration"
 )
 
@@ -77,7 +77,7 @@ endif()
 # Copy EngineQ.dll
 set(DESTINATION "$<TARGET_FILE_DIR:${PROJECT_NAME}>/")
 
-set(SOURCES_DIR "${BUILD_ROOT_PATH}/EngineQScripting/bin/$<CONFIGURATION:${PROJECT_NAME}>") 
+set(SOURCES_DIR "${CMAKE_BINARY_DIR}/EngineQScripting/bin/$<CONFIGURATION:${PROJECT_NAME}>") 
 set(SOURCES 
 	"${SOURCES_DIR}/EngineQ.dll" 
 #	"${SOURCES_DIR}/EngineQ.dll.mdb"
@@ -90,7 +90,7 @@ endforeach()
 # Copy scripts *.dll
 set(DESTINATION "$<TARGET_FILE_DIR:${PROJECT_NAME}>/Scripts/")
 
-set(SOURCES_DIR "${BUILD_ROOT_PATH}/EngineQDemonstrationScripts/bin/$<CONFIGURATION:${PROJECT_NAME}>")
+set(SOURCES_DIR "${CMAKE_BINARY_DIR}/EngineQDemonstrationScripts/bin/$<CONFIGURATION:${PROJECT_NAME}>")
 unset(SOURCES)
 set(SOURCES
 	${SOURCES}
