--- a/EngineQ/Source/EngineQRenderer/CMakeLists.txt
+++ b/EngineQ/Source/EngineQRenderer/CMakeLists.txt
@@ -31,7 +31,7 @@ SetupProject(
 	SOURCES 
 		${SOURCE_FILES}
 	
-	OUTPUT_PATH "${BUILD_ROOT_PATH}/${PROJECT_NAME}/bin"
+#	OUTPUT_PATH "${BUILD_ROOT_PATH}/${PROJECT_NAME}/bin"
 	FOLDER "EngineQ"
 )
 
