--- a/EngineQ/Source/EngineQScripting/CMakeLists.txt
+++ b/EngineQ/Source/EngineQScripting/CMakeLists.txt
@@ -2,32 +2,28 @@ cmake_minimum_required(VERSION 3.0)
 
 project(EngineQScripting)
 
-set(BUILD_BIN_PATH "bin/\$(Configuration)")
-set(BUILD_OBJ_PATH "obj/")
-
 set(DEPENDENCIES
 )
 
 set(PROJECT_GUID "9928F89E-BAE3-48B4-9EE4-10EA062E540D")
 
-
-
-
-
+set(FOLDER_NAME "EngineQ")
 
 
 
 
 
 # Set output directories
-get_filename_component(PROJECT_ROOT_PATH "./" ABSOLUTE)
+set(CS_PROJECT_FILE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.csproj")
 
-set(CS_PROJECT_FILE_PATH "${PROJECT_ROOT_PATH}/${PROJECT_NAME}.csproj")
+set(BUILD_BIN_PATH "bin/\$(Configuration)")
+set(BUILD_OBJ_PATH "obj/")
 
-file(RELATIVE_PATH BUILD_ROOT_RELATIVE_PATH ${PROJECT_ROOT_PATH} ${BUILD_ROOT_PATH})
+set(BUILD_BIN_PATH "${CMAKE_CURRENT_BINARY_DIR}/${BUILD_BIN_PATH}/")
+set(BUILD_OBJ_PATH "${CMAKE_CURRENT_BINARY_DIR}/${BUILD_OBJ_PATH}/")
 
-set(BUILD_BIN_PATH "${BUILD_ROOT_RELATIVE_PATH}/${PROJECT_NAME}/${BUILD_BIN_PATH}/")
-set(BUILD_OBJ_PATH "${BUILD_ROOT_RELATIVE_PATH}/${PROJECT_NAME}/${BUILD_OBJ_PATH}/")
+file(RELATIVE_PATH BUILD_BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${BUILD_BIN_PATH})
+file(RELATIVE_PATH BUILD_OBJ_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${BUILD_OBJ_PATH})
 
 string(REPLACE "/" "\\" BUILD_BIN_PATH ${BUILD_BIN_PATH})
 string(REPLACE "/" "\\" BUILD_OBJ_PATH ${BUILD_OBJ_PATH})
@@ -53,10 +49,9 @@ foreach(LINE IN ITEMS ${CS_PROJECT_CONTENT})
 		if(FOUND)
 			if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 				string(REGEX REPLACE "(Debug|Release)" "Debug" LINE ${LINE})
-			endif()
-			if(${CMAKE_BUILD_TYPE} STREQUAL "Release")
+			else(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 				string(REGEX REPLACE "(Debug|Release)" "Release" LINE ${LINE})
-			endif()
+			endif(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 		endif(FOUND)
 	endif(CMAKE_BUILD_TYPE)
 
@@ -104,9 +99,8 @@ else(MSVC)
 
 endif(MSVC)
 
-set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "EngineQ")
+set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${FOLDER_NAME})
 
 if(DEPENDENCIES)
 	add_dependencies(${PROJECT_NAME} ${DEPENDENCIES})
 endif(DEPENDENCIES)
-	
