--- a/EngineQ/Source/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/Source/EngineQScripting/EngineQScripting.csproj
@@ -16,7 +16,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\Build\EngineQScripting\bin\$(Configuration)\</OutputPath>
+    <OutputPath>..\..\Build\MSVC\EngineQScripting\bin\$(Configuration)</OutputPath>
+    <BaseIntermediateOutputPath>..\..\Build\MSVC\EngineQScripting\obj</BaseIntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +26,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\Build\EngineQScripting\bin\$(Configuration)\</OutputPath>
+    <OutputPath>..\..\Build\MSVC\EngineQScripting\bin\$(Configuration)</OutputPath>
+    <BaseIntermediateOutputPath>..\..\Build\MSVC\EngineQScripting\obj</BaseIntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -87,7 +89,7 @@
     <Content Include="CMakeLists.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
