--- a/EngineQ/Source/EngineQCommon/CMakeLists.txt
+++ b/EngineQ/Source/EngineQCommon/CMakeLists.txt
@@ -23,6 +23,6 @@ SetupProject(
 	SOURCES
 		${SOURCE_FILES}
 
-	OUTPUT_PATH "${BUILD_ROOT_PATH}/${PROJECT_NAME}/bin"
+#	OUTPUT_PATH "${BUILD_ROOT_PATH}/${PROJECT_NAME}/bin"
 	FOLDER "EngineQ"
 )
