--- a/EngineQ/Source/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/Source/EngineQScripting/EngineQScripting.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -46,8 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Math\Ray.cs" />
-    <Compile Include="Math\Segment.cs" />
+    <Compile Include="Math\Shapes\Capsule.cs" />
+    <Compile Include="Math\Shapes\Plane.cs" />
+    <Compile Include="Math\Shapes\Ray.cs" />
+    <Compile Include="Math\Shapes\Segment.cs" />
+    <Compile Include="Math\Shapes\Sphere.cs" />
     <Compile Include="Objects\EffectController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Math\Utils.cs" />
