--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -46,6 +46,7 @@
     <Compile Include="CameraMoveClass.cs" />
     <Compile Include="Experimental\CapsuleCollider.cs" />
     <Compile Include="Experimental\Collider.cs" />
+    <Compile Include="Experimental\ColliderPicker.cs" />
     <Compile Include="HittestScript.cs" />
     <Compile Include="Initializer.cs" />
     <Compile Include="LightController.cs" />
