--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotateTest.cs" />
     <Compile Include="SSAOController.cs" />
-    <Compile Include="TesterScript.cs" />
+    <Compile Include="OptionChanger.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EngineQScripting\EngineQScripting.csproj">
