--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ArrowsController.cs" />
     <Compile Include="CameraMoveClass.cs" />
+    <Compile Include="Effect controllers\CombineController.cs" />
     <Compile Include="Experimental\CapsuleCollider.cs" />
     <Compile Include="Experimental\Collider.cs" />
     <Compile Include="Experimental\ColliderPicker.cs" />
@@ -51,10 +52,10 @@
     <Compile Include="Initializer.cs" />
     <Compile Include="LightController.cs" />
     <Compile Include="LightRotateScript.cs" />
-    <Compile Include="MyEffectController.cs" />
+    <Compile Include="Effect controllers\MyEffectController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotateTest.cs" />
-    <Compile Include="SSAOController.cs" />
+    <Compile Include="Effect controllers\SSAOController.cs" />
     <Compile Include="OptionChanger.cs" />
   </ItemGroup>
   <ItemGroup>
