--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -53,6 +53,7 @@
     <Compile Include="LightController.cs" />
     <Compile Include="LightRotateScript.cs" />
     <Compile Include="Effect controllers\MyEffectController.cs" />
+    <Compile Include="PerformanceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotateTest.cs" />
     <Compile Include="Effect controllers\SSAOController.cs" />
