--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -44,7 +44,9 @@
   <ItemGroup>
     <Compile Include="ArrowsController.cs" />
     <Compile Include="CameraMoveClass.cs" />
+    <Compile Include="Effect controllers\BrightExtractController.cs" />
     <Compile Include="Effect controllers\CombineController.cs" />
+    <Compile Include="Effect controllers\LightingController.cs" />
     <Compile Include="Experimental\CapsuleCollider.cs" />
     <Compile Include="Experimental\Collider.cs" />
     <Compile Include="Experimental\ColliderPicker.cs" />
@@ -52,7 +54,6 @@
     <Compile Include="Initializer.cs" />
     <Compile Include="LightController.cs" />
     <Compile Include="LightRotateScript.cs" />
-    <Compile Include="Effect controllers\MyEffectController.cs" />
     <Compile Include="PerformanceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotateTest.cs" />
